--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="hero-text">
             <h1>Avanzamos juntos hacia una sociedad más inclusiva. </h1>
             <h3>Ayudamos a aquellos pertenecientes al TEA a mejorar su sentido de autonomía. </h3>
-            <button class="btn-solid">Sumate al cambio</button>
+            <a class="btn-solid" href= '@Url.Action("Registrar1", "Account")'>Sumate al cambio</a>
         </div>
     </div>
 </section>
