--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -18,7 +18,29 @@
 
 <div class ="ActividadesPendientes ">
 <h2>Tareas Pendientes: </h2>
-//aca mateo e ilan cunado terminen de hacer su lo de act, pongan las act pendientes aca en un carousel
+
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+  
+  @foreach(var actividad in ViewBag.TareasPendientes){
+    
+     <div class="carousel-item active">
+      <img src="@actividad.imagen" class="d-block w-100" alt="FotoActividad">
+    </div>
+}
+   
+    
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 
 </div>
 <div class ="ir a Chats">
