--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -21,16 +21,18 @@
 
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
-  
-  @foreach(var actividad in ViewBag.TareasPendientes){
-    
-     <div class="carousel-item active">
-      <img src="@actividad.imagen" class="d-block w-100" alt="FotoActividad">
-    </div>
-}
-   
-    
+
+    @for (int i = 0; i < ViewBag.TareasPendientes.Count; i++)
+    {
+        var actividad = ViewBag.TareasPendientes[i];
+        <div class="carousel-item @(i == 0 ? "active" : "")">
+            <img src="@actividad.imagen" class="d-block w-100" alt="FotoActividad">
+            <a href='@Url.Action("JuegoOrdenarPictogramas", "Home")' class="botonComenzarAct">Ir Ahora</a>
+        </div>
+    }
+
   </div>
+
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
@@ -41,8 +43,8 @@
   </button>
 </div>
 
-
 </div>
+
 <div class ="ir a Chats">
 <h2>¿Ya hablaste con alguien hoy?</h2>
 <img src="~/Content/Images/fotoChats.png" alt="Logo Tandem" class="nav-logo">
