con el coso viejo

--- a/Views/Home/FindeJuego.cshtml
+++ b/Views/Home/FindeJuego.cshtml
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <main class="main-content">
-        <section class="completion-container">
-            
+ <main class="main-content">
+        <div class="completion-container">
             <div class="completion-info">
-                <h1 class="completion-title">Juego completado</h1>
+                <div class="completion-header">
+                    <h1 class="completion-title">Juego completado</h1>
+                </div>
+            
 
         <div class="stats-section">
             <span class="stat-item">Completados: @(ViewBag.Correctas) / @(ViewBag.TotalPreguntas)</span>
