--- a/Views/Home/JuegoOrdenarPictogramas.cshtml
+++ b/Views/Home/JuegoOrdenarPictogramas.cshtml
@@ -1,33 +1,39 @@
-
 @if (ViewBag.Mensaje != null)
 {
     <h3 style="color: red;">@ViewBag.Mensaje</h3>
 }
 
 <form method="post" asp-action="VerificarRespuesta">
-    
+
     <input type="hidden" name="idPregunta" value="@ViewBag.Pregunta.IdPregunta" />
-    
-    <div>
-        <h2>¿Qué es?</h2>
 
-        <img src="~/Imagenes/@(ViewBag.Pregunta.ImagenPictograma).png" alt="Pregunta">
-        
+    <div class="juego-container">
+
+        <div class="circulo c1"></div>
+        <div class="circulo c2"></div>
+        <div class="circulo c3"></div>
+
+        <div class="juego-card">
+
+            <h2>¿Qué es?</h2>
+
+            <img class="juego-img"
+                 src="~/Imagenes/@(ViewBag.Pregunta.ImagenPictograma).png" alt="Pregunta" />
+
+            <div class="opciones">
+                @foreach (string palabraOpcion in ViewBag.opciones)
+                {
+                    <button type="submit" name="opcion" value="@palabraOpcion">
+                        @palabraOpcion
+                    </button>
+                }
+            </div>
+
+            <a href='@Url.Action("FinDeJuego", "Home")' class="btn-continuar">Continuar más tarde</a>
+
+        </div>
     </div>
-    
-    <div class="opciones">
 
-    
-
-        @foreach (string palabraOpcion in ViewBag.opciones)
-        {
-            <button type="submit" name="opcion" value="@palabraOpcion">
-                @palabraOpcion
-            </button>
-        }
-    </div>
-    <a href='@Url.Action("FinDeJuego", "Home")' class="nav-btn">Continuar mas tarde </a>
-    
 </form>
 
 @section Scripts {
