ultimo commit bj

--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -41,18 +41,13 @@
             <a href="#" class="btn-continuar">Continuar</a>
         </div>
         <div class="card">
-            <img src="~/img/opuesto.png" alt="Elige el opuesto">
+            <img src="~/imagenes/opuesto.png" alt="Elige el opuesto">
             <h3>ELIGE EL OPUESTO</h3>
             <a href="#" class="btn-continuar">Continuar</a>
         </div>
         <div class="card">
-            <img src="~/img/escucha.png" alt="Escucha y elige">
+            <img src="~/imagenes/escucha.png" alt="Escucha y elige">
             <h3>ESCUCHA Y ELIGE</h3>
-            <a href="#" class="btn-continuar">Continuar</a>
-        </div>
-        <div class="card">
-            <img src="~/img/emociones.png" alt="Emociones">
-            <h3>EMOCIONES</h3>
             <a href="#" class="btn-continuar">Continuar</a>
         </div>
     </div>
