post mauri, funciona todo

--- a/Views/Home/FindeJuego.cshtml
+++ b/Views/Home/FindeJuego.cshtml
@@ -55,7 +55,7 @@
 
             <aside class="character-section">
                 <div class="character-container">
-                    <img src="img/NenaPosand.png" alt="Personaje">
+                    <img src="~/imagenes/NenaPosand.png" alt="Personaje">
                 </div>
             </aside>
 
