--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     {
     <nav class="navbar-custom">
         <div class="nav-left">
-        <a href= '@Url.Action("Registrarse1", "Account")' class="btn btn-hero">   <img src="~/Imagenes/Logo.png" alt="Logo Tandem" class="nav-logo"></a>
+        <a href= '@Url.Action("Home", "Home")' class="btn btn-hero">   <img src="~/Imagenes/Logo.png" alt="Logo Tandem" class="nav-logo"></a>
         </div>
 
         <div class="nav-center">
