--- a/Views/Account/Registrarse.cshtml
+++ b/Views/Account/Registrarse.cshtml
@@ -1,3 +1,8 @@
+@{
+    ViewData["Title"] = "Registrarse";
+    ViewData["mostrarHeaderLanding"] = true;
+}
+
 <div class="registro-container">
     <div class="registro-card">
         <div class="registro-header">
