--- a/Views/Home/FindeJuego.cshtml
+++ b/Views/Home/FindeJuego.cshtml
@@ -18,9 +18,9 @@
             
 
         <div class="stats-section">
-            <span class="stat-item">Completados: @(ViewBag.Correctas) / @(ViewBag.TotalPreguntas)</span>
-            <span class="stat-item">Tiempo Total: @(ViewBag.Duracion)</span>
-            <span class="stat-item">Puntos Obtenidos: @(ViewBag.PuntosGanados)</span>
+            <span class="stat-item">Completados: @(ViewBag.Correctas) / @(ViewBag.TotalPreguntas)</span><br/>
+            <span class="stat-item">Tiempo Total: @(ViewBag.Duracion)</span><br/>
+            <span class="stat-item">Puntos Obtenidos: @(ViewBag.PuntosGanados)</span><br/>
             <span class="stat-item">Puntos Totales: @(ViewBag.PuntajeTotal)</span>
         </div>
 
