--- a/Views/Home/JuegoOrdenarPictogramas.cshtml
+++ b/Views/Home/JuegoOrdenarPictogramas.cshtml
@@ -22,7 +22,7 @@
             <h2>¿Qué es?</h2>
 
             <img class="juego-img"
-                 src="~/Imagenes/@(ViewBag.Pregunta.ImagenPictograma).png" alt="Pregunta" />
+                 src="~/Imagenes/(@ViewBag.Pregunta.ImagenPictograma).png" alt="Pregunta" />
 
             <div class="opciones">
                 @foreach (string palabraOpcion in ViewBag.opciones)
