--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -112,8 +112,30 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+   
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
+    @* INICIO: CÓDIGO PARA REGISTRAR EL TIEMPO AL CERRAR SESIÓN/PESTAÑA *@
+    @if(!mostrarHeaderLanding)
+    {
+    <script>
+        window.addEventListener('beforeunload', function (e) {
+            const tiempoFinMs = new Date().getTime(); 
+            const xhr = new XMLHttpRequest();
+            
+            // La URL llama al método en el HomeController
+            // El 'false' hace la petición SÍNCRONA, forzando al navegador a esperar
+            xhr.open('POST', '@Url.Action("RegistrarTiempoSesion", "Home")', false); 
+            
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            
+            // El nombre del parámetro 'tiempoFinMs' coincide con el del método C#
+            const data = `tiempoFinMs=${tiempoFinMs}`; 
+            
+            xhr.send(data); 
+        });
+    </script>
+    }
 </body>
 
 </html>
